widgets/default/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');

html, body {
    font-family: "Nunito", sans-serif;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

#main-container {
    position: absolute;
    bottom: 0;
    left: 0;
    width: calc(var(--maximum-width, 100%) - 32px);
    padding: 16px;
}

#main-container > div {
    position: relative;
}

/* <================================================[ SHARED STYLE ]================================================> */
#main-container > div > .author-meta {
    --badge-size: 18px;

    width: fit-content;
    height: var(--badge-size);
    position: absolute;
    top: 0;
    left: 8px;
    transform: translateY(-50%);
    display: flex;
    justify-content: center;
    align-items: center;
    gap:8px;
    white-space: nowrap;
    padding: 4px 8px;
    border-radius: 4px;
    background: #343a40;
}

#main-container > div > .author-meta > .badges {
    width: fit-content;
    height: var(--badge-size);
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
    white-space: nowrap;
}

#main-container > div > .author-meta > .badges:empty {
    display: none;
}

#main-container > div > .author-meta > .badges > img {
    width: var(--badge-size);
    height: var(--badge-size);
}

#main-container > div > .author-meta > .name {
    width: fit-content;
    height: var(--badge-size);
    color: #FFFFFF;
    white-space: nowrap;
    font-weight: bold;
}
/* <==============================================[ END SHARED STYLE ]==============================================> */

/* <============================================[ SIMPLE MESSAGE STYLE ]============================================> */
#main-container > .message-item {
    margin-top: calc((26px / 2) + 8px); /* 8px top margin + 26px for the meta section height divided by 2 */
    position: relative;
}

#main-container > .message-item > .message {
    padding: calc(8px + (26px / 2)) 8px 8px 8px; /* 8px top padding + 26px for the meta section height divided by 2 */
    border-radius: 4px;
    background: #FFFFFF;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
}

#main-container > .message-item > .message > img {
    width: 18px;
    height: 18px;
}
/* <==========================================[ END SIMPLE MESSAGE STYLE ]==========================================> */

/* <============================================[ DONATE MESSAGE STYLE ]============================================> */
#main-container > .donate-item {
    margin-top: calc((26px / 2) + 8px); /* 8px top margin + 26px for the meta section height divided by 2 */
    position: relative;
}

#main-container > .donate-item > .author-meta {
    left: 50%;
    transform: translate(-50%, -50%);
}

#main-container > .donate-item > .message-wrapper {
    padding: calc(8px + (26px / 2)) 8px 8px 8px; /* 8px top padding + 26px for the meta section height divided by 2 */
    border-radius: 4px;
    background: #1971c2;
    color: #FFFFFF;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
}

#main-container > .donate-item > .message-wrapper > .donate-meta {
    font-weight: bold;
    text-align: center;
}

#main-container > .donate-item > .message-wrapper > .donate-meta > .value {
    font-weight: bolder;
    color: #fcc419; /* Highlight the value in a different color */
}

#main-container > .donate-item > .message-wrapper > .message {
    margin-top: 8px;
    background: rgba(0, 0, 0, 0.25);
    border-radius: 4px;
    padding: 8px;
    text-align: center;
}

#main-container > .donate-item > .message-wrapper > .message > img {
    width: 18px;
    height: 18px;
}
/* <==========================================[ END DONATE MESSAGE STYLE ]==========================================> */

/* <============================================[ SPONSOR MESSAGE STYLE ]============================================> */
#main-container > .sponsor-item {
    margin-top: calc((26px / 2) + 8px); /* 8px top margin + 26px for the meta section height divided by 2 */
    position: relative;
}

#main-container > .sponsor-item > .author-meta {
    left: 50%;
    transform: translate(-50%, -50%);
}

#main-container > .sponsor-item > .message-wrapper {
    padding: calc(8px + (26px / 2)) 8px 8px 8px; /* 8px top padding + 26px for the meta section height divided by 2 */
    border-radius: 4px;
    background: #495057;
    color: #FFFFFF;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
}

#main-container > .sponsor-item > .message-wrapper > .sponsor-meta {
    font-weight: bold;
    text-align: center;
}

#main-container > .sponsor-item > .message-wrapper > .sponsor-meta > span {
    font-weight: bolder;
    color: #fcc419; /* Highlight the value in a different color */
}

#main-container > .sponsor-item > .message-wrapper > .message {
    margin-top: 8px;
    background: rgba(0, 0, 0, 0.25);
    border-radius: 4px;
    padding: 8px;
    text-align: center;
}

#main-container > .sponsor-item > .message-wrapper > .message:empty {
    display: none; /* Hide the message if it's empty */
}

#main-container > .sponsor-item > .message-wrapper > .message > img {
    width: 18px;
    height: 18px;
}
/* <==========================================[ END SPONSOR MESSAGE STYLE ]==========================================> */

/* <=========================================[ SPONSOR GIFT MESSAGE STYLE ]=========================================> */
#main-container > .spogift-item {
    margin-top: 8px;
    position: relative;
}

#main-container > .spogift-item > .message {
    position: relative;
    padding: 8px;
    text-align: center;
    border-radius: 4px;
    background: #f08c00;
    color: #212529;
    font-weight: bold;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
    height: 64px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

#main-container > .spogift-item > .message:before {
    font-family: "Font Awesome 6 Free";
    font-weight: 900;
    content: "\f06b";
    font-size: calc(64px + 16px);
    position: absolute;
    bottom: -8px;
    right: -8px;
    transform: rotate(-45deg);
    color: rgba(255, 255, 255, 0.25);
    z-index: 0;
}

#main-container > .spogift-item > .message > span {
    z-index: 1;
}

#main-container > .spogift-item > .message > span > span {
    font-weight: bolder;
}
/* <=======================================[ END SPONSOR GIFT MESSAGE STYLE ]=======================================> */

/* <=============================================[ RAID MESSAGE STYLE ]=============================================> */
#main-container > .raid-item {
    margin-top: 8px;
    position: relative;
}

#main-container > .raid-item > .message {
    padding: 8px;
    text-align: center;
    border-radius: 4px;
    background: #66a80f;
    color: #FFFFFF;
    font-weight: bold;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
    height: 64px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#main-container > .raid-item > .message > img {
    width: 18px;
    height: 18px;
}
/* <===========================================[ END RAID MESSAGE STYLE ]===========================================> */

